--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>eToolBox</title>
     <link rel="stylesheet" href="./styles/styles.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
 
@@ -14,27 +16,45 @@
         crossorigin="anonymous"></script>
 
     <style>
-    #photo:hover{
-        opacity: 90%;
-        transform:scale(103%)
-    }
-    
-
-</style>
+        .card:hover {
+            opacity: 90%;
+            transform: scale(103%);
+            transition: 0.2s;
+        }
+    </style>
 </head>
+
 <body>
-    <nav>
+    <nav id="navbar">
         <ul>
-            <li><a href="./index.html">eToolBox</a></li>
-            <li><a href="pages/customers.html"><img src="./images/customers.svg" alt="Customers">Customers</a></li>
-            <li><a href="pages/inventory.html"><img src="./images/inventory.svg" alt="Inventory">Inventory</a></li>
-            <li><a href="pages/services.html"><img src="./images/services.svg" alt="Services">Services</a></li>
-            <li><a href="pages/pricing.html"><img src="./images/pricing.svg" alt="Pricing">Pricing</a></li>
+            <li><a style="background-color: black;" href="../Capstone/index.html"><img src="../Capstone/images/toolbox.svg" alt="Customers"> eToolBox</a></li>
+            <li><a href="../Capstone/pages/customers.html"><img src="../Capstone/images/customers.svg" alt="Customers"> Customers</a></li>
+            <li><a href="../Capstone/pages/inventory.html"><img src="../Capstone/images/inventory.svg" alt="Inventory"> Inventory</a></li>
+            <li><a href="../Capstone/pages/services.html"><img src="../Capstone/images/services.svg" alt="Services"> Services</a></li>
+            <li><a href="../Capstone/pages/pricing.html"><img src="../Capstone/images/pricing.svg" alt="Pricing"> Pricing</a></li>
         </ul>
     </nav>
-</body>
-<div id="about">
-    <p>eToolBox helps small bike shops manage online operations such as keep track of <a href="pages/customers.html">customer information</a>, <a href="pages/inventory.html">inventory of parts</a>, <a href="pages/services.html">service repairs</a>, and <a href="pages/pricing.html">pricelist</a> readly available - all in one place, like a tool box, but online.</p>
-    <img style="border-radius:30px;" id="photo" src="./images/bikeshop.jpg" width="400px">
+
+<div class="card" style="width: 30rem; margin: 30px; display: flex;">
+    <div class="card-body">
+        <div style="padding: 20px 20px 0px 20px;">
+            <h4 class="card-title"><strong>eToolBox</strong></h4>
+            <p class="card-text">
+            <p style="font-size: large; text-align:justify">Help small bike shops manage tasks and operations task such as keeping track
+                of <b>customers information</b>, <b>inventory of parts</b>, <b>service repairs</b> time estimate and documentation, as well
+                as having a handy <b>pricelist</b> readly available - all in one place, like a tool box, but online.</p>
+            </p>
+        </div>
+    </div>
+    <img
+    style="
+    width: 85%;
+    filter: saturate(20%);
+    margin-bottom: 40px;
+    border-radius:50px;
+    align-self: center"
+    src="../Capstone/images/bikeshop.jpg"
+    class="card-img-bottom" alt="bike_shop">
 </div>
+</body>
 </html>
