--- a/pages/services.html
+++ b/pages/services.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Services</title>
     <link rel="stylesheet" href="../styles/styles.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
-        
+
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 </head>
+
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">eToolBox</a></li>
-            <li><a href="../pages/customers.html"><img src="../images/customers.svg" alt="Customers">Customers</a></li>
-            <li><a href="../pages/inventory.html"><img src="../images/inventory.svg" alt="Inventory">Inventory</a></li>
-            <li><a href="../pages/services.html"><img src="../images/services.svg" alt="Services">Services</a></li>
-            <li><a href="../pages/pricing.html"><img src="../images/pricing.svg" alt="Pricing">Pricing</a></li>
+            <li><a href="../index.html">          <img src="../images/toolbox.svg" alt="Customers"> eToolBox</a></li>
+            <li><a href="../pages/customers.html"><img src="../images/customers.svg" alt="Customers"> Customers</a></li>
+            <li><a href="../pages/inventory.html"><img src="../images/inventory.svg" alt="Inventory"> Inventory</a></li>
+            <li><a style="background-color: black;" href="../pages/services.html"><img src="../images/services.svg" alt="Services"> Services</a></li>
+            <li><a href="../pages/pricing.html"><img src="../images/pricing.svg" alt="Pricing"> Pricing</a></li>
         </ul>
     </nav>
-<table class="table table-hover table-striped">
-  <thead class="table-dark">
-    <tr>
-      <th scope="col">SKU</th>
-      <th scope="col">Item</th>
-      <th scope="col">Price</th>
-      <th scope="col">Time Estimate</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">TUP</th>
-      <td>Tune Up</td>
-      <td>$180</td>
-      <td>2hrs</td>
-    </tr>
-    <tr>
-      <th scope="row">BRK</th>
-      <td>Brake</td>
-      <td>$30/ea</td>
-      <td>30min</td>
-    </tr>
-    <tr>
-      <th scope="row">SFT</th>
-      <td>Shifting</td>
-      <td>$30/ea</td>
-      <td>30min</td>
-    </tr>
-  </tbody>
-</table>
+    <table class="table table-hover table-striped">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">SKU</th>
+                <th scope="col">Item</th>
+                <th scope="col">Price</th>
+                <th scope="col">Time Estimate</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">TUP</th>
+                <td>Tune Up</td>
+                <td>$180</td>
+                <td>2hrs</td>
+            </tr>
+            <tr>
+                <th scope="row">BRK</th>
+                <td>Brake</td>
+                <td>$30/ea</td>
+                <td>30min</td>
+            </tr>
+            <tr>
+                <th scope="row">SFT</th>
+                <td>Shifting</td>
+                <td>$30/ea</td>
+                <td>30min</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
